updated grid page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,11 @@
     min-height: 100vh;
 }
 
+div,
+span {
+    box-sizing: border-box;
+}
+
 .App-logo {
     height: 40vmin;
     pointer-events: none;
